--- a/style.css
+++ b/style.css
@@ -14,69 +14,79 @@ p {
     color: var(--gray);
 }
 
-nav {
-
-
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    
-    img {
-        width: 180px;
-    }
-
-    ul {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
-
-    a {
-        text-decoration: none;
-        color: var(--gray);
-
-        &.active {
-            color: var(--blue);
-            font-weight: 600;
-        }
-
-        &:hover {
-        color: var(--blue);
-        }
-    }
-
-    .burger {
-
-        width: 40px;
-        height: 40px;
-
-        flex-direction: column;
-        justify-content: center;
-        gap: 5px;
-
-        display: none;
-
-        div {
-            height: 5px;
-            background-color: var(--gray);
-            width: 100%;
-        }
-    }
-}
 
 .sticky-container {
     position: fixed;
+    display: flex;
+    justify-content: space-between;
+    background-color: #ffff;
+    width: 100%;
+
+    z-index: 200;
+
+    nav {
+
+
+        height: 80px;
+        display: flex;
+        align-items: center;
+
+        gap: 250px;
+    
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+        
+        img {
+            width: 180px;
+        }
+    
+        ul {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+    
+        a {
+            text-decoration: none;
+            color: var(--gray);
+    
+            &.active {
+                color: var(--blue);
+                font-weight: 600;
+            }
+    
+            &:hover {
+            color: var(--blue);
+            }
+        }
+    
+        .burger {
+    
+            width: 40px;
+            height: 40px;
+    
+            flex-direction: column;
+            justify-content: center;
+            gap: 5px;
+    
+            display: none;
+    
+            div {
+                height: 5px;
+                background-color: var(--gray);
+                width: 100%;
+            }
+        }
+    }
 }
 
 .hero {
     background: linear-gradient(180deg, #E3F8FF 18.55%, #C4E1FC 100%);
 
     display: flex;
+
+    z-index: 0;
 
     /* padding: 150px; */
 
